# aoc22

./: LICENSE  style.css
day1/: index.html  sketch.js
day3/: index.html  sketch.js
day4/: CMakeLists.txt  day4.cpp  interval.cpp  interval.h
day5/: sketch.js
day6/: CMakeLists.txt  day6.cpp
p5-template/: sketch.js
